--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" data-theme="bumblebee">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/ico" href="/src/assets/Oplayground.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>O'playground</title>
   </head>
