:bug: FR on index.html

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" data-theme="bumblebee">
+<html lang="fr" data-theme="bumblebee">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/ico" href="/src/assets/Oplayground.ico" />
